--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>SkillShare Exercise</title>
+  <title>Comments Exercise</title>
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
